GameSettings添加强制使用LinerBlendSkin方法的选项

--- a/mods/ts/3dtest/meshes.yaml
+++ b/mods/ts/3dtest/meshes.yaml
@@ -39,7 +39,7 @@ rumya:
 		body-hip: body_DT_2
 			Shader: CharacterBody
 			BaseMaterial: body
-			UseDQBSkin: false
+			UseDQBSkin: true
 			Material: none
 		body-thigh: body_DT_3
 			Shader: CharacterBody
