默认地图被探索

--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -55,7 +55,7 @@ APC:
 		PauseOnCondition: empdisable
 		TargetRelationships: None
 		Cursor: ability
-		OutsideRangeCursor: ability
+		OutsideRangeCursor: move
 	AttackFollow:
 		PauseOnCondition: empdisable
 		Voice: Move
