--- a/mods/ts/rules/shared-structures.yaml
+++ b/mods/ts/rules/shared-structures.yaml
@@ -1,6 +1,7 @@
 GACNST:
 	Inherits: ^Building
 	Inherits@SHAPE: ^3x3Shape
+	Inherits@bounty: ^GlobalBounty
 	Building:
 		Footprint: xxx xxx xxx
 		BuildSounds: facbld1.aud
@@ -104,6 +105,7 @@ GACNST:
 PROC:
 	Inherits: ^Building
 	Inherits@SHAPE: ^4x3FactoryWithBibShape
+	Inherits@bounty: ^GlobalBounty
 	Valued:
 		Cost: 2000
 	Tooltip:
@@ -177,6 +179,7 @@ PROC:
 GASILO:
 	Inherits: ^Building
 	Inherits@SHAPE: ^2x2Shape
+	Inherits@bounty: ^GlobalBounty
 	Buildable:
 		Queue: Defense
 		BuildPaletteOrder: 60
