修复mesh的uv错误，修复一些其他问题

--- a/mods/ts/maps/fields-of-green-test/rules.yaml
+++ b/mods/ts/maps/fields-of-green-test/rules.yaml
@@ -11,10 +11,10 @@ World:
 
 
 ^BaseWorld:
-	TerrainLighting:
-		BlueTint: 0.7
-		Intensity: 0.65
-		AmbientIntensity: 0.28
+	# TerrainLighting:
+	# 	BlueTint: 0.7
+	# 	Intensity: 0.65
+	# 	AmbientIntensity: 0.28
 
 INGRNLMP:
 	TerrainLightSource:
